--- a/assets/styles/estilosalexis.css
+++ b/assets/styles/estilosalexis.css
@@ -1,1 +1,4 @@
-h1{color: rgb(255, 81, 0);}
+body{background-color:rgb(0, 0, 0);}
+body{color: darkgrey;}
+h1{color: blue;}
+.cuevas {color:crimson;}
