--- a/assets/styles/estilosalexis.css
+++ b/assets/styles/estilosalexis.css
@@ -1,4 +1,17 @@
-body{background-color:rgb(0, 0, 0);}
+body{background-color:rgb(88, 88, 88);}
 body{color: darkgrey;}
 h1{color: blue;}
 .cuevas {color:crimson;}
+.ilustracion{
+    margin-top: 4rem;
+    margin-left: 4rem;
+    font-style: italic;
+}
+.titulodelblog{text-align: center; font-size: 2rem;}
+/*article{border-bottom: 1px solid #fff; }*/
+
+article{border-bottom-width: 1px ;
+        border-bottom-color: aqua;
+        border-bottom-style: dotted;}
+
+        nav ul li {list-style: none;}
