--- a/assets/styles/estilosalexis.css
+++ b/assets/styles/estilosalexis.css
@@ -1,4 +1,4 @@
-body{background-color:rgb(255, 255, 255);}
+body{background-color:rgba(0, 225, 255, 0.575);}
 body{color: rgb(36, 36, 36);}
 h1{color: rgb(233, 66, 0);}
 .cuevas {color:rgb(220, 93, 20);}
@@ -7,7 +7,7 @@ h1{color: rgb(233, 66, 0);}
     margin-left: 4rem;
     font-style: italic;
 }
-.titulodelblog{text-align: center; font-size: 2rem;}
+.titulodelblog{text-align: center; font-size: 2rem; font-style:arial ; text-decoration: wavy underline;}
 
 /*article{border-bottom: 1px solid #fff; }*/
 article{border-bottom-width: 1px ;
