--- a/assets/styles/estilosjp.css
+++ b/assets/styles/estilosjp.css
@@ -1,13 +1,16 @@
-body{background-color:rgb(255, 255, 255);}
-body{color: rgb(36, 36, 36);}
-h1{color: rgb(233, 66, 0);}
-.cuevas {color:rgb(220, 93, 20);}
+body{background-color:rgb(255, 0, 170);}
+body{color: rgb(255, 255, 255);}
+h1{color: rgb(80, 80, 80);}
+.cuevas {color:rgb(116, 116, 116);}
 .ilustracion{
     margin-top: 4rem;
     margin-left: 4rem;
     font-style: italic;
 }
 .titulodelblog{text-align: center; font-size: 2rem;}
+
+.footerblog{margin-top: 2rem;
+    margin-left: 5rem;}
 
 /*article{border-bottom: 1px solid #fff; }*/
 article{border-bottom-width: 1px ;
