--- a/assets/styles/estilosalexis.css
+++ b/assets/styles/estilosalexis.css
@@ -24,3 +24,13 @@ article{border-bottom-width: 3px ;
 nav ul li a{text-decoration: none;}
 .img{align-content: center;}
 #aidi{color:blueviolet;}
+
+.cuadro{ 
+    display: inline-block;
+    border: 5px yellow solid;
+}
+
+.borde{background-color: blueviolet;
+    border-color: black;
+    margin: 20px red;
+padding: 50px ;}
