--- a/assets/styles/estilosalexis.css
+++ b/assets/styles/estilosalexis.css
@@ -34,3 +34,23 @@ nav ul li a{text-decoration: none;}
     border-color: black;
     margin: 20px red;
 padding: 50px ;}
+
+section{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows:auto ;
+    gap: 3rem;
+}
+
+section>header{
+    grid-column: span 12;
+}
+section>main{
+    grid-column: span 8;
+}
+section>aside{
+    grid-column: span 4;
+}
+section>footer{
+    grid-column: span 12;
+}
