--- a/assets/styles/estilosjp.css
+++ b/assets/styles/estilosjp.css
@@ -18,3 +18,21 @@ article{border-bottom-width: 1px ;
         border-bottom-style: dotted;}
 
         nav ul li {list-style: none;}
+        section{
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            grid-auto-rows:auto ;
+            gap: 3rem;
+        }
+        
+        section>header{
+            grid-column: span 12;
+        }
+        section>main{
+            grid-column: span 8;
+        }
+        section>aside{
+            grid-column: span 4;
+        }
+        section>footer{
+            grid-column: span 12;
