--- a/assets/styles/estilosalexis.css
+++ b/assets/styles/estilosalexis.css
@@ -21,7 +21,7 @@ article{border-bottom-width: 3px ;
 
 .resaltado{color:yellow;}
 
-nav ul li a{text-decoration: none;}
+nav>ul>li>a{text-decoration: none;}
 .img{align-content: center;}
 #aidi{color:blueviolet;}
 
@@ -53,4 +53,17 @@ section>aside{
 }
 section>footer{
     grid-column: span 12;
+}
+
+nav>ul{
+    display: flex;
+    align-items:center ;
+    justify-content: space-around;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 0.5rem;
+}
+nav>ul>li>a:hover { text-decoration: underline;
+    color: red;
+
+
 }
