--- a/assets/styles/estilosjp.css
+++ b/assets/styles/estilosjp.css
@@ -36,3 +36,16 @@ article{border-bottom-width: 1px ;
         }
         section>footer{
             grid-column: span 12;
+        }
+        nav>ul{
+            display: flex;
+            align-items:center ;
+            justify-content: space-around;
+            border-bottom: 1px solid #fff;
+            padding-bottom: 0.5rem;
+        }
+        nav>ul>li>a:hover { text-decoration: underline;
+            color: teal;
+        
+        
+        }
